discussion/kv_engine/146424/146424_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44349: Return a 'non-extended' error for set_collections failure

Use of a new/extended error results in ns_server being disconnected.
This has further consequences, such as the inability for the
detection of commit failure.

Switch over to using the generic 'failed' error, KV still logs
detailed warning messages for failure and we will keep ns_server
connected.

Change-Id: I4a74b34f05f3216b7fad1219711c5f7a4abcc420

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-02-18 12:51:23.000000000
Message: 
Patch Set 2: Patch Set 1 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-18 13:13:11.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7180/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/manifest_update_test.cc:61:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7180/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/manifest_update_test.cc:61:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7180/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33701/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\collections\manifest_update_test.cc(61): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33701/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28976/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/collections/manifest_update_test.cc:61:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28976/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7827/ : FAILURE

Compile error at [2021-02-18T13:02:05.040Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_update_test.cc:61:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7827/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8774/ : FAILURE

Compile error at [2021-02-18T13:12:17.766Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_update_test.cc:61:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8774/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8912/ : FAILURE

Compile error at [2021-02-18T13:03:02.139Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_update_test.cc:61:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8912/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9120/ : FAILURE

Compile error at [2021-02-18T13:07:46.744Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_update_test.cc:61:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9120/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16673/ : FAILURE

Compile error at [2021-02-18T13:07:23.638Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_update_test.cc:61:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16673/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5717/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
